# pdf

./: .pre-commit-config.yaml  MANIFEST.in  Makefile  pic.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
src/xpdf/: add_watermark.py  cli.py  remove_watermark.py  utils.py
src/xpdf/command/: __init__.py  version.py  watermark.py
