[metadata]
name = xpdf
version = attr: xpdf.__version__
description = xpdf
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/caimaoy/pdf
author = caimaoy
author_email = i@caimaoy.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    loguru==0.5.3
    pydantic==1.8.2
    requests==2.26.0
    typer==0.4.1
    reportlab==4.0.9
    PyPDF2==3.0.1
    PyMuPDF==1.23.15
    # PyMuPDF==1.22.5
python_requires = >=3.7
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    xpdf = xpdf.cli:main

[bdist_wheel]
universal = 1

[mypy]
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_unused_ignores = true
